--- a/css/master.css
+++ b/css/master.css
@@ -177,6 +177,7 @@ ul {
 }
 .lanbing .content h1 {
   font-size: 70px;
+  padding : 20px;
   text-align: center;
   color: white;
   margin: 0 0 25px;
