--- a/css/master.css
+++ b/css/master.css
@@ -180,6 +180,8 @@ ul {
   text-align: center;
   color: white;
   margin: 0 0 25px;
+  font-size: 60px;
+
 }
 .lanbing .content p {
   text-align: center;
